Updated tagline and view class button font

--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Kaushan Script", cursive;
+  font-family: "Wendy One", sans-serif;
 }
 
 h3 {
@@ -276,7 +276,7 @@ header {
   max-width: 90%;
   height: 100%;
   padding: 8px 0;
-  font-family: "Kaushan Script", cursive;
+  font-family: "Wendy One", sans-serif;
   font-size: 1.9rem;
   font-weight: bolder;
   text-align: center;
