--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -410,11 +410,11 @@ footer {
   }
 
   #logo {
-    background-image: url("../images/thumb/zumbaLogo30.png");
+    background-image: url("../images/full/logo30.png");
     background-repeat: no-repeat;
-    width: 250px;
+    width: 314px;
     max-width: 100%;
-    height: 79px;
+    height: 139px;
     margin: auto;
   }
 
@@ -831,12 +831,12 @@ footer {
   }
 
   #logo {
-    background-image: url("../images/full/zumbaLogo50.png");
+    background-image: url("../images/full/logo30.png");
     background-repeat: no-repeat;
-    width: 480px;
+    width: 314px;
     max-width: 100%;
-    height: 124px;
-    /*margin: auto;*/
+    height: 139px;
+    margin: auto;
   }
 
   #slideshow {
@@ -1268,11 +1268,11 @@ footer {
 @media screen and (min-width: 50.1em) and (max-width: 80em) {
 
   #logo {
-    background-image: url("../images/full/zumbaLogo80.png");
+    background-image: url("../images/full/logo80.png");
     background-repeat: no-repeat;
-    width: 800px;
+    width: 514px;
     max-width: 100%;
-    height: 164px;
+    height: 218px;
     margin: auto;
   }
 
@@ -1797,13 +1797,12 @@ footer {
 @media screen and (min-width: 80.1em) {
   
   #logo {
-    background-image: url("../images/full/zumbaLogo1281.png");
+    background-image: url("../images/full/logo80.png");
     background-repeat: no-repeat;
-    width: 1200px;
+    width: 514px;
     max-width: 100%;
-    height: 250px;
+    height: 218px;
     margin: auto;
-    font-size: 0rem;
   }
 
   #slideshow {
@@ -1897,7 +1896,7 @@ footer {
   }
 
   #mainContainer {
-    width: 80em;
+    width: 60em;
     height: 100%;
     margin-top: 3rem;
     background-color: #f7f7f7;
