--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -419,18 +419,18 @@ footer {
   }
 
   #slideshow {
-    /*background-image: url("../images/thumb/zumbaHome50.jpg");
-    background-repeat: no-repeat;*/
+    background-image: url("../images/full/zumbaHome.jpg");
+    background-repeat: no-repeat;
     width: 350px;
     max-width: 90%;
-    /*height: 233px;*/
+    height: 233px;
     margin: auto;
     margin-top: 2rem;
   }
 
   /*! slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
-.rslides {
+/*.rslides {
   position: relative;
   list-style: none;
   overflow: hidden;
@@ -460,7 +460,7 @@ footer {
   float: left;
   width: 100%;
   border: 0;
-  }
+  }*/
 
    /*! end of slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
@@ -836,18 +836,18 @@ footer {
   }
 
   #slideshow {
-    /*background-image: url("../images/thumb/zumbaHome50.jpg");
-    background-repeat: no-repeat;*/
+    background-image: url("../images/full/zumbaHome.jpg");
+    background-repeat: no-repeat;
     width: 800px;
     max-width: 90%;
-    /*height: 233px;*/
+    height: 233px;
     margin: auto;
     margin-top: 2rem;
   }
 
   /*! slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
-.rslides {
+/*.rslides {
   position: relative;
   list-style: none;
   overflow: hidden;
@@ -877,7 +877,7 @@ footer {
   float: left;
   width: 100%;
   border: 0;
-  }
+  }*/
 
    /*! end of slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
@@ -1131,7 +1131,8 @@ footer {
     text-transform: uppercase;
     padding-top: 1rem;
   }
-
+  
+ 
   .directions {
     width: 100%;
     margin: auto;
@@ -1274,18 +1275,18 @@ footer {
   }
 
   #slideshow {
-    /*background-image: url("../images/full/zumbaHome1281.jpg");
-    background-repeat: no-repeat;*/
+    background-image: url("../images/full/zumbaHome.jpg");
+    background-repeat: no-repeat;
     width: 800px;
     max-width: 90%;
-    /*height: 533px;*/
+    height: 533px;
     margin: auto;
     margin-top: 2rem;
   }
 
   /*! slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
-.rslides {
+/*.rslides {
   position: relative;
   list-style: none;
   overflow: hidden;
@@ -1315,7 +1316,7 @@ footer {
   float: left;
   width: 100%;
   border: 0;
-  }
+  }*/
 
    /*! end of slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
@@ -1621,7 +1622,7 @@ footer {
     width: 100%;
     height: 100%;
     margin: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     overflow: hidden;
   }
 
@@ -1805,20 +1806,20 @@ footer {
     height: 218px;
     margin: auto;
   }
-
+  
   #slideshow {
-    /*background-image: url("../images/full/zumbaHome1281.jpg");
-    background-repeat: no-repeat;*/
-    width: 1000px;
-    max-width: 100%;
+    background-image: url("../images/full/zumbaHome.jpg");
+    background-repeat: no-repeat;
+    width: 800px;
+    max-width: 90%;
+    height: 550px;
     margin: auto;
-    margin-top: 3rem;
-    background-color: red;
+    margin-top: 2rem;
   }
 
   /*! slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
-.rslides {
+/*.rslides {
   position: relative;
   list-style: none;
   overflow: hidden;
@@ -1848,7 +1849,7 @@ footer {
   float: left;
   width: 100%;
   border: 0;
-  }
+  }*/
 
    /*! end of slideshow css http://responsiveslides.com v1.53 by @viljamis */
 
@@ -2150,7 +2151,7 @@ footer {
     width: 100%;
     height: 100%;
     margin: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     overflow: hidden;
   }
 
