Populated About me page main heading, content, tagline and promotional message

--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -382,6 +382,10 @@ footer {
   color: #14080a;
 }
 
+.adminLabel{
+  color: #9f4ac8;;
+}
+
 /**********************************************************************************************************/
 
 /* ===== == = === 30em (480 px) portrait  smartphone === = == ===== */
