--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -335,6 +335,7 @@ header {
 
 input[type="email"],
 input[type="text"],
+input[type="password"],
 textarea {
   background-color: white;
   border: 1px solid rgba(153, 153, 153, 0.1);
@@ -875,7 +876,9 @@ footer {
   }
 
   input[type="email"],
-  input[type="text"], textarea {
+  input[type="text"], 
+input[type="password"],
+  textarea {
     width: 100%;
     height: 2.5rem;
     margin-bottom: 0.6rem;
@@ -1384,7 +1387,9 @@ footer {
   }
 
   input[type="email"],
-  input[type="text"], textarea {
+  input[type="text"], 
+  input[type="password"],
+  textarea {
     width: 100%;
     height: 2.5rem;
     margin-bottom: 0.6rem;
@@ -1960,7 +1965,9 @@ footer {
   }
 
   input[type="email"],
-  input[type="text"], textarea {
+  input[type="text"], 
+  input[type="password"],
+  textarea {
     width: 100%;
     height: 2.5rem;
     margin-bottom: 0.6rem;
@@ -2537,7 +2544,9 @@ footer {
   }
 
   input[type="email"],
-  input[type="text"], textarea {
+  input[type="text"], 
+  input[type="password"],
+  textarea {
     width: 100%;
     height: 2.5rem;
     margin-bottom: 0.6rem;
