Restyled promo box for large view

--- a/public/css/_main.css
+++ b/public/css/_main.css
@@ -2215,7 +2215,7 @@ input[type="password"],
   .promoAbout, 
   .promoClasses, 
   .promoContact {
-    width: 30em;
+    width: 40%;
     margin: auto;
   }
   
